<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="sans-serif-condensed"
        android:textSize="28sp"
        android:text="@string/title_register" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_firstname"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:maxLines="1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/bt_register"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            />

        <TextView
            android:id="@+id/bt_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_now"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>