<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_weather"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_item_weather" />

    <item
        android:id="@+id/item_set"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_item_set" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/item_clothes"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_item_clothes" />

    <item
        android:id="@+id/item_calendar"
        android:icon="@drawable/ic_outline_calendar_month_24"
        android:title="@string/title_item_calendar" />

</menu>