<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <Button
            android:id="@+id/bt_previous_month"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/my_purple"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/month_and_year"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/bt_next_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="@color/my_purple"
            android:backgroundTint="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_new_purple"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/my_purple"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/my_purple"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/my_purple"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/my_purple"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/my_purple"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_new_purple"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"/>

<!--    <TextView-->
<!--        android:id="@+id/some_view_from_calendar_fragment"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="some_view_from_calendar_fragment" />-->

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/bt_new_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Запланировать комплект"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"/>

    <ListView
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>