<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_wall"
        android:gravity="center"
        android:padding="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white2_background"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="60dp"
                android:paddingRight="30dp"
                android:paddingBottom="60dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/title_login"
                    android:textColor="@color/very_dark_purple"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="E-mail"
                        android:textColor="@color/very_dark_purple"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="3dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/white2_background"
                        android:gravity="start|center_vertical"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/very_dark_purple" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Пароль"
                        android:textColor="@color/very_dark_purple"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="3dp"
                        android:autofillHints="password"
                        android:background="@drawable/white2_background"
                        android:gravity="start|center_vertical"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/very_dark_purple" />

                </LinearLayout>

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/very_dark_purple"
                    android:text="@string/bt_login"
                    android:textSize="16sp"
                    app:cornerRadius="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/bt_register_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/register_now"
                        android:textStyle="bold"
                        android:textSize="13sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</RelativeLayout>